--- a/.github/workflows/LoginAPI20250204135906.yml
+++ b/.github/workflows/LoginAPI20250204135906.yml
@@ -11,9 +11,8 @@ env:
   AZURE_APIM_SERVICENAME: LoginAPI-apim2
   AZURE_APIM_API_ID: LoginAPI
   AZURE_APIM_APPSERVICEURL: https://loginapi20250204135906.azurewebsites.net
-  SWASHBUCLE_ASPNET_CORE_CLI_PACKAGE_VERSION: 5.6.3
-  SWASHBUCKLE_DOTNET_CORE_VERSION: 3.1.x
-  API_IMPORT_SPECIFICATION_PATH: Login.API\publish\swagger.json
+  SWASHBUCLE_ASPNET_CORE_CLI_PACKAGE_VERSION: 6.5.0
+  API_IMPORT_SPECIFICATION_PATH: Login.API\bin\publish\net9.0\swagger.json
   API_IMPORT_DLL: Login.API\bin\publish\net9.0\Login.API.dll
   API_IMPORT_VERSION: v1
   CONFIGURATION: Release
