--- a/.github/workflows/JobTrackerLoginAPI.yml
+++ b/.github/workflows/JobTrackerLoginAPI.yml
@@ -20,6 +20,7 @@ env:
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 9.0.x
   WORKING_DIRECTORY: Login.API
+
 jobs:
   build:
     runs-on: windows-latest
@@ -44,7 +45,6 @@ jobs:
     - name: Install Swashbuckle CLI .NET Global Tool
       run: dotnet tool install --global Swashbuckle.AspNetCore.Cli --version ${{ env.SWASHBUCLE_ASPNET_CORE_CLI_PACKAGE_VERSION }}
       working-directory: ${{ env.WORKING_DIRECTORY }}
-
     - name: Generate Open API Specification Document
       run: |
           echo "Checking DLL path: ${{ env.API_IMPORT_DLL }}"
@@ -54,7 +54,6 @@ jobs:
             echo "Failed to generate swagger file"
             exit 1
           }
-      
     - name: Verify Swagger File
       run: |
           if (Test-Path "${{ env.API_IMPORT_SPECIFICATION_PATH }}") {
@@ -63,12 +62,16 @@ jobs:
             echo "Swagger file not found"
             exit 1
           }
-
     - name: Publish Artifacts
       uses: actions/upload-artifact@v4
       with:
         name: webapp
         path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+    - name: List .NET workload updates
+      run: dotnet workload list
+    - name: Update .NET workloads
+      run: dotnet workload update
+
   deploy:
     runs-on: windows-latest
     needs: build
@@ -88,7 +91,6 @@ jobs:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
     - name: Import API into Azure API Management
-      run: az apim api import --path "${{ env.AZURE_APIM_RESOURCE_PATH }}" --resource-group "${{ env.AZURE_APIM_RESOURCEGROUP }}" --service-name "${{ env.AZURE_APIM_SERVICENAME }}" --api-id "${{ env.AZURE_APIM_API_ID }}" --service-url "${{ env.AZURE_APIM_APPSERVICEURL }}" --specification-path "${{ env.API_IMPORT_SPECIFICATION_PATH }}" --specification-format OpenApi --subscription-required false
+      run: az apim api import --path "${{ env.AZURE_APIM_RESOURCE_PATH }}" --resource-group "${{ env.AZURE_APIM_RESOURCEGROUP }}" --service-name "${{ env.AZURE_APIM_SERVICENAME }}" --api-id "${{ env.AZURE_APIM_API_ID }}" --specification-path "${{ env.API_IMPORT_SPECIFICATION_PATH }}" --service-url "${{ env.AZURE_APIM_APPSERVICEURL }}"
     - name: logout
-      run: >
-        az logout
+      run: az logout
