--- a/.github/workflows/JobTrackerAPITool1.yml
+++ b/.github/workflows/JobTrackerAPITool1.yml
@@ -65,24 +65,24 @@ jobs:
       - name: Add .NET tools to PATH
         run: echo "$HOME/.dotnet/tools" >> $GITHUB_PATH
       
-      - name: Generate Open API Specification Document
-        run: |
-          echo "Checking DLL path: ${{ env.API_IMPORT_DLL }}"
-          if (dotnet swagger tofile --output "${{ env.API_IMPORT_SPECIFICATION_PATH }}" "${{ env.API_IMPORT_DLL }}" "${{ env.API_IMPORT_VERSION }}") {
-            echo "Swagger file generated successfully"
-          } else {
-            echo "Failed to generate swagger file"
-            exit 1
-          }
+      # - name: Generate Open API Specification Document
+      #   run: |
+      #     echo "Checking DLL path: ${{ env.API_IMPORT_DLL }}"
+      #     if (dotnet swagger tofile --output "${{ env.API_IMPORT_SPECIFICATION_PATH }}" "${{ env.API_IMPORT_DLL }}" "${{ env.API_IMPORT_VERSION }}") {
+      #       echo "Swagger file generated successfully"
+      #     } else {
+      #       echo "Failed to generate swagger file"
+      #       exit 1
+      #     }
       
-      - name: Verify Swagger File
-        run: |
-          if (Test-Path "${{ env.API_IMPORT_SPECIFICATION_PATH }}") {
-            echo "Swagger file exists"
-          } else {
-            echo "Swagger file not found"
-            exit 1
-          }
+      # - name: Verify Swagger File
+      #   run: |
+      #     if (Test-Path "${{ env.API_IMPORT_SPECIFICATION_PATH }}") {
+      #       echo "Swagger file exists"
+      #     } else {
+      #       echo "Swagger file not found"
+      #       exit 1
+      #     }
       
       - name: Publish Artifacts
         uses: actions/upload-artifact@v4
