--- a/.github/workflows/JobTrackerLoginAPI.yml
+++ b/.github/workflows/JobTrackerLoginAPI.yml
@@ -45,23 +45,23 @@ jobs:
     - name: Install Swashbuckle CLI .NET Global Tool
       run: dotnet tool install --global Swashbuckle.AspNetCore.Cli --version ${{ env.SWASHBUCLE_ASPNET_CORE_CLI_PACKAGE_VERSION }}
       working-directory: ${{ env.WORKING_DIRECTORY }}
-    - name: Generate Open API Specification Document
-      run: |
-          echo "Checking DLL path: ${{ env.API_IMPORT_DLL }}"
-          if (dotnet swagger tofile --output "${{ env.API_IMPORT_SPECIFICATION_PATH }}" "${{ env.API_IMPORT_DLL }}" "${{ env.API_IMPORT_VERSION }}") {
-            echo "Swagger file generated successfully"
-          } else {
-            echo "Failed to generate swagger file"
-            exit 1
-          }
-    - name: Verify Swagger File
-      run: |
-          if (Test-Path "${{ env.API_IMPORT_SPECIFICATION_PATH }}") {
-            echo "Swagger file exists"
-          } else {
-            echo "Swagger file not found"
-            exit 1
-          }
+    # - name: Generate Open API Specification Document
+    #   run: |
+    #       echo "Checking DLL path: ${{ env.API_IMPORT_DLL }}"
+    #       if (dotnet swagger tofile --output "${{ env.API_IMPORT_SPECIFICATION_PATH }}" "${{ env.API_IMPORT_DLL }}" "${{ env.API_IMPORT_VERSION }}") {
+    #         echo "Swagger file generated successfully"
+    #       } else {
+    #         echo "Failed to generate swagger file"
+    #         exit 1
+    #       }
+    # - name: Verify Swagger File
+    #   run: |
+    #       if (Test-Path "${{ env.API_IMPORT_SPECIFICATION_PATH }}") {
+    #         echo "Swagger file exists"
+    #       } else {
+    #         echo "Swagger file not found"
+    #         exit 1
+    #       }
     - name: Publish Artifacts
       uses: actions/upload-artifact@v4
       with:
