--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/JobTracker.API.Tool/appsettings.Development.json
+/Login.API/appsettings.Development.json
