--- a/Login.API/appsettings.json
+++ b/Login.API/appsettings.json
@@ -21,7 +21,7 @@
   },
   "ConnectionStrings": {
     //"DefaultConnection": "Server=(local), 1433;Database=JobTracker01; Integrated Security=True; TrustServerCertificate=Yes"
-    "DefaultConnection": "Server=tcp:jobtracker01.database.windows.net,1433;Initial Catalog=JobTrackingAppAzureDB;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=Active Directory Default"
+    "DefaultConnection": "Server=tcp:jobtracker01.database.windows.net,1433;Database=JobTrackingAppAzureDB;Authentication=Active Directory Managed Identity;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Jwt": {
     "Key": "${JWT_SECRET_KEY}",
