--- a/Login.API/appsettings.json
+++ b/Login.API/appsettings.json
@@ -24,7 +24,7 @@
     "DefaultConnection": "Server=tcp:jobtracker01.database.windows.net,1433;Database=JobTrackingAppAzureDB;Authentication=Active Directory Managed Identity;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Jwt": {
-    "Key": "${JWT_SECRET_KEY}",
+    "Key": "${JWT-SECRET-KEY}",
     "Issuer": "Test.com",
     "Audience": "TestAudience",
     "ExpiresInMinutes": 15,
