--- a/JobTracker.API.Tool/appsettings.Development.json
+++ b/JobTracker.API.Tool/appsettings.Development.json
@@ -32,10 +32,9 @@
     "Microsoft": "Warning",
     "Microsoft.Hosting.Lifetime": "Information",
     "Microsoft.EntityFrameworkCore": "Warning"
-  }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(local), 1433;Database=JobTracker01; Integrated Security=True; TrustServerCertificate=Yes",
+    "DefaultConnection": "Server=(local), 1433;Database=JobTracker01; Integrated Security=True; TrustServerCertificate=Yes"
 
     //this is for local development, not for azure devops pipeline
     //"DefaultConnection": "Server=tcp:jobtracker01.database.windows.net,1433;Initial Catalog=JobTrackingAppAzureDB;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=Active Directory Default"
