--- a/.github/workflows/JobTrackerAPI.yml
+++ b/.github/workflows/JobTrackerAPI.yml
@@ -41,8 +41,8 @@ jobs:
       - name: Build
         run: dotnet build ${{ env.WORKING_DIRECTORY }} --configuration ${{ env.CONFIGURATION }} --no-restore
       
-      - name: Test
-        run: dotnet test ${{ env.WORKING_DIRECTORY }} --no-build
+      # - name: Test
+      #   run: dotnet test ${{ env.WORKING_DIRECTORY }} --no-build
       
       - name: Publish
         run: dotnet publish ${{ env.WORKING_DIRECTORY }} --configuration ${{ env.CONFIGURATION }} --no-build --output ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
@@ -89,6 +89,28 @@ jobs:
         with:
           name: webapp
           path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+
+  test:
+    runs-on: windows-latest
+    needs: build
+    steps:
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v4
+        with:
+          name: webapp
+          path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+    
+      - name: Restore dependencies
+        run: dotnet restore
+
+      # - name: Run tests
+      #   run: dotnet test --configuration ${{ env.CONFIGURATION }} --no-build --verbosity normal
+
+      - name: Run unit tests
+        run: dotnet test JobTracker.UnitTests/JobTracker.UnitTests.csproj --no-build
+
+      - name: Run API tests
+        run: dotnet test JobTracker.API.Tool.Tests/JobTracker.API.ToolTests.csproj --no-build
 
   deploy:
     runs-on: windows-latest
