--- a/.github/workflows/JobTrackerLoginAPI.yml
+++ b/.github/workflows/JobTrackerLoginAPI.yml
@@ -83,7 +83,7 @@ jobs:
           path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
     
       - name: Restore dependencies
-        run: dotnet restore
+        run: dotnet restore JobTracker.sln
 
       # - name: Run tests
       #   run: dotnet test --configuration ${{ env.CONFIGURATION }} --no-build --verbosity normal
