--- a/.github/workflows/JobTrackerAPI.yml
+++ b/.github/workflows/JobTrackerAPI.yml
@@ -100,11 +100,16 @@ jobs:
           name: webapp
           path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
     
-      - name: Restore dependencies
-        run: dotnet restore JobTracker.sln
+      # - name: Restore dependencies
+      #   run: dotnet restore JobTracker.sln
 
       # - name: Run tests
       #   run: dotnet test --configuration ${{ env.CONFIGURATION }} --no-build --verbosity normal
+      - name: Restore unit test dependencies
+        run: dotnet restore JobTracker.UnitTests/JobTracker.UnitTests.csproj
+
+      - name: Restore API test dependencies
+        run: dotnet restore JobTracker.API.ToolTests/JobTracker.API.ToolTests.csproj
 
       - name: Run unit tests
         run: dotnet test JobTracker.UnitTests/JobTracker.UnitTests.csproj --no-build
