--- a/.github/workflows/JobTrackerLoginAPI.yml
+++ b/.github/workflows/JobTrackerLoginAPI.yml
@@ -88,10 +88,10 @@ jobs:
       # - name: Run tests
       #   run: dotnet test --configuration ${{ env.CONFIGURATION }} --no-build --verbosity normal
       - name: Restore unit test dependencies
-        run: dotnet restore JobTracker.UnitTests/JobTracker.UnitTests.csproj
+        run: dotnet restore JobTrackerTool\JobTracker.UnitTests\JobTracker.UnitTests.csproj.csproj
 
       - name: Restore API test dependencies
-        run: dotnet restore JobTracker.API.ToolTests/JobTracker.API.ToolTests.csproj
+        run: dotnet restore JobTrackerTool\JobTracker.API.ToolTests\JobTracker.API.ToolTests.csproj
 
       - name: Run unit tests
         run: dotnet test JobTracker.UnitTests/JobTracker.UnitTests.csproj --no-build
