--- a/.github/workflows/JobTrackerLoginAPI.yml
+++ b/.github/workflows/JobTrackerLoginAPI.yml
@@ -97,7 +97,7 @@ jobs:
         run: dotnet test JobTracker.UnitTests/JobTracker.UnitTests.csproj --no-build
 
       - name: Run API tests
-        run: dotnet test JobTracker.API.Tool.Tests/JobTracker.API.ToolTests.csproj --no-build
+        run: dotnet test JobTracker.API.ToolTests/JobTracker.API.ToolTests.csproj --no-build
 
   deploy:
     runs-on: windows-latest
