--- a/.github/workflows/JobTrackerAPI.yml
+++ b/.github/workflows/JobTrackerAPI.yml
@@ -105,21 +105,20 @@ jobs:
 
       # - name: Run tests
       #   run: dotnet test --configuration ${{ env.CONFIGURATION }} --no-build --verbosity normal
+      - name: List files in workspace
+        run: ls -R
+
       - name: Restore unit test dependencies
-        run: dotnet restore ./JobTracker.UnitTests/JobTracker.UnitTests.csproj
-        working-directory: ${{ github.workspace }}
+        run: dotnet restore JobTracker.UnitTests/JobTracker.UnitTests.csproj
 
       - name: Restore API test dependencies
-        run: dotnet restore ./JobTracker.API.ToolTests/JobTracker.API.ToolTests.csproj
-        working-directory: ${{ github.workspace }}
+        run: dotnet restore JobTracker.API.ToolTests/JobTracker.API.ToolTests.csproj
 
       - name: Run unit tests
         run: dotnet test JobTracker.UnitTests/JobTracker.UnitTests.csproj --no-build
-        working-directory: ${{ github.workspace }}
 
       - name: Run API tests
         run: dotnet test JobTracker.API.ToolTests/JobTracker.API.ToolTests.csproj --no-build
-        working-directory: ${{ github.workspace }}
 
   deploy:
     runs-on: windows-latest
