--- a/.github/workflows/JobTrackerAPI.yml
+++ b/.github/workflows/JobTrackerAPI.yml
@@ -124,7 +124,7 @@ jobs:
 
   deploy:
     runs-on: windows-latest
-    needs: build
+    needs: [build, test]
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
