--- a/.github/workflows/JobTrackerLoginAPI.yml
+++ b/.github/workflows/JobTrackerLoginAPI.yml
@@ -106,7 +106,7 @@ jobs:
 
   deploy:
     runs-on: windows-latest
-    needs: build
+    needs: [build, test]
     steps:
     - name: Download artifact from build job
       uses: actions/download-artifact@v4
