--- a/Login.API/appsettings.json
+++ b/Login.API/appsettings.json
@@ -26,9 +26,9 @@
     "Host": "mail.smtp2go.com",
     "Port": 2525,
     "EnableSsl": true,
-    "Username": "${EMAIL-USERNAME}",
-    "Password": "${EMAIL-PASSWORD}",
-    "FromEmail": "${EMAIL-DOMAIN}"
+    "Username": "",
+    "Password": "",
+    "FromEmail": ""
   },
   "ConnectionStrings": {
     //"DefaultConnection": "Server=(local), 1433;Database=JobTracker01; Integrated Security=True; TrustServerCertificate=Yes"
