--- a/JobTrackerApp/.vscode/launch.json
+++ b/JobTrackerApp/.vscode/launch.json
@@ -10,6 +10,41 @@
       "url": "http://localhost:4200/"
     },
     {
+      "name": "ng serve with SSL",
+      "type": "chrome",
+      "request": "launch",
+      "preLaunchTask": "npm: start-ssl",
+      "url": "https://localhost:4200/"
+    },
+    {
+      "name": "ng build",
+      "type": "chrome",
+      "request": "launch",
+      "preLaunchTask": "npm: build",
+      "url": "http://localhost:4200/"
+    },
+    {
+      "name": "ng e2e",
+      "type": "chrome",
+      "request": "launch",
+      "preLaunchTask": "npm: e2e",
+      "url": "http://localhost:4200/"
+    },
+    {
+      "name": "ng lint",
+      "type": "chrome",
+      "request": "launch",
+      "preLaunchTask": "npm: lint",
+      "url": "http://localhost:4200/"
+    },
+    {
+      "name": "ng test",
+      "type": "chrome",
+      "request": "launch",
+      "preLaunchTask": "npm: test",
+      "url": "http://localhost:9876/debug.html"
+    },
+    {
       "name": "ng test",
       "type": "chrome",
       "request": "launch",
