--- a/JobTrackerApp/package.json
+++ b/JobTrackerApp/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start-ssl": "ng serve --ssl true",
     "build": "ng build",
     "build:prod": "ng build --configuration production --output-path=C:/JobTrackerApp/JobApp",
     "watch": "ng build --watch --configuration development",
